# ChessBots

./: .gitignore  requirements.txt
.github/workflows/: python-conda.yml
code/: .gitignore  bot_vs_bot.py  generate_train_data.py  simulate.py  simulate_serial.py  train.py
code/fast_search/: .clang-tidy  CMakeLists.txt
code/fast_search/lib/: CMakeLists.txt  board.cpp  board.h
code/mmEngine/database/: __init__.py  load_database.py
code/mmEngine/models/: __init__.py  big_cnn.py  load_model.py  save_model.py  small_cnn.py  store.py
code/mmEngine/value_funtions/: __init__.py  nn_keras.py  nn_pytorch.py  value_function.py
code/research/: alternative_onehot.py
code/tests/pytorch/: Encode_test.py  smallCn_test.py
data/: .gitignore  readme.md
